--- a/demo003/public/index.html
+++ b/demo003/public/index.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/api/user/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" id="file" value="" multiple="multiple" />
+<form action="/api/user/uploads" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" value="" multiple="multiple"/>
+    <input type="file" name="file" value="" multiple="multiple"/>
+    <input type="file" name="file" value="" multiple="multiple"/>
     <input type="submit" value="提交"/>
 </form>
 </body>
